# gpt

./: .gitignore  README.md  SCUM-DB-EDIT-SPEC-v1.10.md  pom.xml  pyproject.toml  run-linux.sh  run-windows.bat  setup.cfg
app/: main.py
app/diagnostico/: assistente_correcao.py  classificador_erros.py
app/dominio/: corretor_cue.py  modelos.py  validador_imagem_cue.py
app/infra/: executor_comandos.py  gravador_cdrdao.py  leitor_dispositivos_opticos.py  logs.py
app/polkit_helper/: helper.py
app/testes/: test_classificador_erros.py  test_corretor_cue.py  test_validador_cue.py
app/ui/: janela_principal.py
app/viewmodels/: main_viewmodel.py
packaging/appimage/: build-appimage.sh
packaging/arch/: PKGBUILD
packaging/debian/: build-deb.sh
packaging/debian/debian/: control  gravador-cdrdao.install
packaging/flatpak/: br.com.gravadorcdrdao.yml
packaging/rpm/: build-rpm.sh  gravador-cdrdao.spec
resources/: br.com.gravadorcdrdao.policy  gravador-cdrdao-helper  gravador-cdrdao.desktop
scum-db-edit/: pom.xml
scum-db-edit/src/main/java/com/scumdbedit/: App.java
src/gravador_cdrdao/: __init__.py  app.py  classificador_erros.py  dispositivos.py  executor_cdrdao.py  janela_principal.py  main.py  parser_cue.py  privilegios.py  requisitos.py  viewmodel_principal.py
src/main/java/com/scumdbedit/: ScumDbEditApp.java
src/main/java/com/scumdbedit/db/: DatabaseManager.java
src/main/java/com/scumdbedit/model/: Player.java  PlayerData.java
src/main/java/com/scumdbedit/ui/: MainTab.java  PlayerListPanel.java
tests/: test_parser_cue.py
(+11 files in other folders)
