[project]
name = "gravador-cdrdao"
version = "0.1.0"
description = "GUI simples para gravação de CDs usando cdrdao"
requires-python = ">=3.10"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
addopts = "-q"
