[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gravador-cdrdao"
version = "0.1.0"
description = "Gravador CDRDAO - gravador simples de CDs com cdrdao"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Equipe Gravador CDRDAO" }]
dependencies = [
  "PySide6>=6.6.0",
]

[project.scripts]
gravador-cdrdao = "gravador_cdrdao.main:main"

[tool.black]
line-length = 88

target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "B"]

target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
